# cratestack

./: .env.test.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  compose.yml  deny.toml  justfile  rust-toolchain.toml
crates/cratestack/: Cargo.toml  README.md
crates/cratestack-axum/: Cargo.toml  README.md
crates/cratestack-axum/src/: codec.rs  headers.rs  idempotency.rs  lib.rs  query.rs  ratelimit.rs  rpc.rs  transport.rs
crates/cratestack-cli/: Cargo.toml  README.md
crates/cratestack-cli/src/: cli_handlers.rs  cli_support.rs  cli_types.rs  drift.rs  main.rs  migrate.rs
crates/cratestack-client-dart/: Cargo.toml  README.md
crates/cratestack-client-dart/src/: builders.rs  builders_model.rs  config.rs  context.rs  dart_types.rs  generator.rs  idents.rs  lib.rs  naming.rs  templates.rs  templates_fragments.rs  views.rs  wire_decode.rs  wire_encode.rs
crates/cratestack-client-dart/templates/: CHANGELOG.md.j2  README.md.j2  apis.dart.j2  constants.dart.j2  example_main.dart.j2  library.dart.j2  models.dart.j2  package_test.dart.j2  pubspec.yaml.j2  rest-queries.dart.j2  rest-runtime.dart.j2  rpc-apis.dart.j2  rpc-library.dart.j2  rpc-runtime.dart.j2
crates/cratestack-client-dart/tests/: generator.rs  snapshot.rs
crates/cratestack-client-flutter/: Cargo.toml  README.md
crates/cratestack-client-flutter/src/: conversions.rs  decoder.rs  lib.rs  runtime.rs  types.rs
crates/cratestack-client-flutter/tests/: cbor_seq_decoder.rs  runtime_bridge.rs  streaming_bridge.rs
crates/cratestack-client-rust/: Cargo.toml  README.md
crates/cratestack-client-rust/src/: auth.rs  codec.rs  config.rs  error.rs  lib.rs  projection.rs  state.rs  streaming.rs  streaming_callback.rs  tests.rs
crates/cratestack-client-rust/tests/: generated_client.rs  spike.rs  streaming.rs
crates/cratestack-client-store-redis/: Cargo.toml  README.md
crates/cratestack-client-store-redis/src/: config.rs  lib.rs  store.rs
crates/cratestack-client-store-sqlite/: Cargo.toml  README.md
crates/cratestack-client-store-sqlite/src/: bootstrap.rs  lib.rs  ops.rs  store.rs
crates/cratestack-client-store-sqlite/tests/: spike.rs
crates/cratestack-client-typescript/: Cargo.toml  README.md
crates/cratestack-client-typescript/src/: config.rs  context.rs  generator.rs  lib.rs  naming.rs  templates.rs  types.rs  views.rs
crates/cratestack-client-typescript/templates/: README.md.j2  package.json.j2  tsconfig.json.j2
crates/cratestack-client-typescript/tests/: generator.rs  snapshot.rs
crates/cratestack-codec-cbor/: Cargo.toml  README.md
crates/cratestack-codec-cbor/src/: lib.rs
crates/cratestack-codegen-template/: Cargo.toml
crates/cratestack-codegen-template/src/: lib.rs
crates/cratestack-core/: Cargo.toml  README.md
crates/cratestack-core/src/: audit.rs  batch.rs  codec.rs  context.rs  envelope.rs  error.rs  events.rs  json.rs  lib.rs  page.rs  projection.rs  rpc.rs  schema.rs  transport.rs  validators.rs  value.rs
crates/cratestack-lsp/: Cargo.toml  README.md
crates/cratestack-lsp/src/: analyze.rs  completion.rs  definition.rs  document_symbols.rs  hover.rs  main.rs  relation_parse.rs  server.rs  state.rs  tests.rs  text.rs  type_ref.rs
crates/cratestack-macros/: Cargo.toml  README.md
crates/cratestack-macros/src/: axum.rs  client.rs  event.rs  include.rs  lib.rs  model.rs  policy.rs  procedure.rs  relation.rs  shared.rs  transport.rs  types.rs  validators.rs
crates/cratestack-migrate/: Cargo.toml  README.md
crates/cratestack-migrate/src/: convert.rs  diff.rs  error.rs  ir.rs  lib.rs  naming.rs  snapshot.rs
crates/cratestack-parser/: Cargo.toml  README.md
crates/cratestack-parser/src/: diagnostics.rs  lib.rs  line_helpers.rs  parse.rs  relation_helpers.rs  tests.rs  tests_basic.rs  tests_docs.rs  tests_enums.rs  tests_field_attrs.rs  tests_mixins.rs  tests_model_attrs.rs  tests_procedures.rs  tests_relations.rs  tests_relations_policy.rs  tests_transport.rs  tests_types.rs  tests_validators.rs  tests_version.rs  tests_views.rs  validate.rs
crates/cratestack-pg/: Cargo.toml  README.md
crates/cratestack-pg/examples/: server_basic.rs
crates/cratestack-pg/src/: lib.rs
crates/cratestack-pg/tests/: banking_audit.rs  banking_batches.rs  banking_builder_extensions_tier3.rs  banking_builder_extensions_tier5.rs  banking_builder_extensions_tier6.rs  banking_builder_extensions_tier7.rs  banking_chained_audit_tx.rs  banking_decimal.rs  banking_field_policy.rs  banking_migrations.rs  banking_rate_limit.rs  banking_soft_delete_audit.rs  fixture_table_names.rs  generated_client_rust.rs  generated_client_rust_rpc.rs  include_schema.rs  json_roundtrip.rs  list_limit_cap.rs  migrate_dbgenerated.rs  policy_db.rs  policy_db_advanced.rs  policy_db_auth_engine.rs  policy_db_recursive.rs  projection_tolerance.rs  rpc_canonical_request.rs  rpc_pagination.rs  type_block_model_reference.rs  views_macro_smoke.rs  views_materialized_integration.rs  views_pg_integration.rs
crates/cratestack-policy/: Cargo.toml  README.md
crates/cratestack-policy/src/: eval.rs  lib.rs  procedure_types.rs  read_types.rs
crates/cratestack-redis/: Cargo.toml  README.md
crates/cratestack-redis/src/: idempotency.rs  lib.rs  ratelimit.rs  support.rs
crates/cratestack-redis/tests/: e2e.rs  e2e_ratelimit.rs  idempotency.rs  ratelimit.rs
crates/cratestack-rusqlite/: Cargo.toml  README.md
crates/cratestack-rusqlite/src/: batch.rs  ddl.rs  delegate.rs  ffi.rs  lib.rs  opfs.rs  render.rs  row.rs  runtime.rs  (+1 more)
crates/cratestack-sql/: Cargo.toml  README.md
crates/cratestack-sqlite/: Cargo.toml  README.md
crates/cratestack-sqlx/: Cargo.toml  README.md
crates/cratestack-studio/: Cargo.toml  README.md  build.rs
crates/cratestack-studio-generator/: Cargo.toml  README.md
crates/cratestack-studio-ui/: Cargo.toml  index.html
examples/client-multi-service/: Cargo.toml  README.md
examples/client-stub-rust/: Cargo.toml  README.md  schema.cstack
examples/embedded-browser-webpack/: .gitignore  Cargo.toml  README.md  schema.cstack
(+948 files in other folders)
