[workspace]
resolver = "3"
members = [
    "crates/cratestack",
    "crates/cratestack-axum",
    "crates/cratestack-cli",
    "crates/cratestack-client-dart",
    "crates/cratestack-client-flutter",
    "crates/cratestack-client-typescript",
    "crates/cratestack-client-store-redis",
    "crates/cratestack-client-rust",
    "crates/cratestack-client-store-sqlite",
    "crates/cratestack-codec-cbor",
    "crates/cratestack-codec-json",
    "crates/cratestack-core",
    "crates/cratestack-lsp",
    "crates/cratestack-macros",
    "crates/cratestack-migrate",
    "crates/cratestack-parser",
    "crates/cratestack-pg",
    "crates/cratestack-policy",
    "crates/cratestack-redis",
    "crates/cratestack-rusqlite",
    "crates/cratestack-sql",
    "crates/cratestack-sqlite",
    "crates/cratestack-sqlx",
    "crates/cratestack-studio",
    "crates/cratestack-studio-generator",
    "examples/embedded-cli",
    "examples/embedded-daemon",
    "examples/embedded-webhook",
    "examples/client-stub-rust",
    "examples/client-multi-service",
    "examples/microservice-pair",
    "examples/rpc-procedures",
    "examples/rpc-streaming",
    "examples/rpc-streaming-client-rust",
    "examples/rpc-batch",
    "examples/rpc-batch-debounce",
    "examples/embedded-browser-vite",
    "examples/embedded-browser-vite-pwa",
    "examples/embedded-browser-webpack",
    "examples/react-vite-daisyui",
    "examples/react-nextjs-daisyui/wasm",
    "examples/react-nextjs-daisyui/napi",
    "examples/tauri-web",
    "examples/tauri-web/src-tauri",
    "examples/tauri-native/src-tauri",
    # Note: this crate's [package] name is `embedded_flutter_native` (underscore,
    # not hyphen) — flutter_rust_bridge's cargokit demands it.
    "examples/embedded-flutter/native",
    "examples/embedded-expo/native",
]

exclude = [
    # The Studio web UI is a wasm32 target built by Trunk, not a
    # workspace member — keeping it out of `cargo check --workspace`
    # avoids forcing every developer onto the wasm32 toolchain.
    "crates/cratestack-studio-ui",
]

[workspace.package]
version = "0.4.13"
edition = "2024"
license = "MIT"
description = "Rust-native schema-first framework for typed HTTP APIs, generated clients, and backend services."
repository = "https://github.com/cratestack/cratestack"
homepage = "https://cratestack.dev"
documentation = "https://rust-doc.cratestack.dev/cratestack"
# readme set per-package
keywords = ["api", "schema", "codegen", "axum", "sqlx"]
categories = ["web-programming", "development-tools"]
authors = [
    "Stephane Segning <selastlambou@gmail.com>",
]

[workspace.dependencies]
anyhow = "1"
ariadne = "0.6.0"
axum = "0"
bytes = "1"
chumsky = "0"
minicbor = "2.2.1"
minicbor-serde = { version = "0.6.2", features = ["std"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cratestack-axum = { path = "crates/cratestack-axum", version = "0.4.13" }
cratestack-client-dart = { path = "crates/cratestack-client-dart", version = "0.4.13" }
cratestack-client-flutter = { path = "crates/cratestack-client-flutter", version = "0.4.13" }
cratestack-client-typescript = { path = "crates/cratestack-client-typescript", version = "0.4.13" }
cratestack-client-store-redis = { path = "crates/cratestack-client-store-redis", version = "0.4.13" }
cratestack-client-rust = { path = "crates/cratestack-client-rust", version = "0.4.13", default-features = false }
cratestack-client-store-sqlite = { path = "crates/cratestack-client-store-sqlite", version = "0.4.13" }
cratestack-codec-cbor = { path = "crates/cratestack-codec-cbor", version = "0.4.13" }
cratestack-codec-json = { path = "crates/cratestack-codec-json", version = "0.4.13" }
cratestack-core = { path = "crates/cratestack-core", version = "0.4.13" }
cratestack-macros = { path = "crates/cratestack-macros", version = "0.4.13" }
cratestack-migrate = { path = "crates/cratestack-migrate", version = "0.4.13" }
cratestack-parser = { path = "crates/cratestack-parser", version = "0.4.13" }
cratestack-pg = { path = "crates/cratestack-pg", version = "0.4.13" }
cratestack-policy = { path = "crates/cratestack-policy", version = "0.4.13" }
cratestack-redis = { path = "crates/cratestack-redis", version = "0.4.13" }
cratestack-rusqlite = { path = "crates/cratestack-rusqlite", version = "0.4.13" }
cratestack-sql = { path = "crates/cratestack-sql", version = "0.4.13" }
cratestack-sqlite = { path = "crates/cratestack-sqlite", version = "0.4.13" }
cratestack-sqlx = { path = "crates/cratestack-sqlx", version = "0.4.13" }
cratestack-studio = { path = "crates/cratestack-studio", version = "0.4.13" }
cratestack-studio-generator = { path = "crates/cratestack-studio-generator", version = "0.4.13" }
minijinja = "2"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rusqlite = { version = "0.39", features = ["bundled", "fallible_uint"] }
redis = "1.2.0"
regex = "1"
rust_decimal = { version = "1", default-features = false, features = ["serde-str"] }
bigdecimal = { version = "0.4", default-features = false, features = ["serde"] }
sha2 = "0.10"
async-trait = "0.1"
hmac = "0.12"
subtle = "2"
base64 = "0.22"
serde_json = "1"
serde_urlencoded = "0.7.1"
http = "1"
proc-macro2 = "1"
rust-embed = { version = "8", default-features = false }
quote = "1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx-core = { version = "=0.8.6", default-features = false, features = ["migrate", "any", "_rt-tokio", "_tls-rustls-ring-webpki"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono", "uuid", "json", "migrate", "any", "offline"] }
syn = { version = "2.0.108", features = ["full"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tower-lsp-server = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "std"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
