[package]
name = "cratestack-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
cratestack-core.workspace = true
serde.workspace = true
url.workspace = true
