[package]
name = "cratestack-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
cratestack-core.workspace = true
http.workspace = true
serde.workspace = true
sha2.workspace = true
tower.workspace = true
url.workspace = true
