[package]
name = "cratestack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cratestack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cratestack-client-dart.workspace = true
cratestack-client-typescript.workspace = true
cratestack-core.workspace = true
cratestack-studio-generator.workspace = true
cratestack-parser.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
