[package]
name = "cratestack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cratestack"
path = "src/main.rs"

# Resolved by `cargo binstall cratestack-cli` against the GitHub Release
# assets published by .github/workflows/release-cli.yml — the archive
# naming here must stay in sync with that workflow's `Package archive`
# step.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
cratestack-client-dart.workspace = true
cratestack-client-typescript.workspace = true
cratestack-core.workspace = true
cratestack-migrate.workspace = true
cratestack-parser.workspace = true
cratestack-studio.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
