[package]
name = "cratestack-client-flutter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratestack-client-rust.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
axum.workspace = true
cratestack-codec-cbor.workspace = true
cratestack-core.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
