[package]
name = "cratestack-client-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
cratestack-codec-cbor.workspace = true
cratestack-codec-json.workspace = true
cratestack-core.workspace = true
minicbor-serde.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
cratestack-core.workspace = true
serde.workspace = true
tokio.workspace = true
