[package]
name = "cratestack-client-store-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
cratestack-client-rust.workspace = true
redis.workspace = true
serde_json.workspace = true

