[package]
name = "cratestack-client-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratestack-core.workspace = true
minijinja.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cratestack-parser.workspace = true
