[package]
name = "cratestack-codec-cbor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratestack-core.workspace = true
minicbor-serde.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
