[package]
name = "cratestack-codegen-template"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared minijinja-template scaffolding for cratestack client and studio generators."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
minijinja.workspace = true
serde.workspace = true
thiserror.workspace = true
