[package]
name = "cratestack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["decimal-rust-decimal"]
# Use rust_decimal (128-bit fixed-precision) as the workspace Decimal backend.
decimal-rust-decimal = ["dep:rust_decimal"]
# Reserved for the alternative arbitrary-precision backend; not yet wired
# end-to-end. Selecting this feature today will fail compilation.
decimal-bigdecimal = ["dep:bigdecimal"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
hmac.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
