[package]
name = "cratestack-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cratestack-lsp"
path = "src/main.rs"

[dependencies]
cratestack-core.workspace = true
cratestack-parser.workspace = true
tokio = { workspace = true, features = ["io-std", "sync"] }
tower-lsp.workspace = true
