[package]
name = "cratestack-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
cratestack-core.workspace = true
cratestack-parser.workspace = true
cratestack-policy.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
