[package]
name = "cratestack-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
cratestack-core.workspace = true
cratestack-parser.workspace = true
cratestack-policy.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
