[package]
name = "cratestack-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CrateStack server facade — Postgres (sqlx) backend with Axum HTTP bindings, generated Rust client runtime, and the shared schema/parser/policy/SQL surface. Pick this crate via `cratestack = { package = \"cratestack-pg\" }` for backend services."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

# The library is named `cratestack` so that integration tests under
# `tests/` resolve `::cratestack::*` paths (which the schema macros
# emit) without per-file aliasing. External consumers depend on the
# package as `cratestack = { package = "cratestack-pg" }` — Cargo's
# package-rename mechanism already exposes the lib under whatever name
# they pick on their side, so this `[lib] name` change is invisible
# downstream.
[lib]
name = "cratestack"
path = "src/lib.rs"

[features]
default = ["decimal-rust-decimal"]
decimal-rust-decimal = [
    "cratestack-core/decimal-rust-decimal",
    "cratestack-sqlx/decimal-rust-decimal",
]
decimal-bigdecimal = [
    "cratestack-core/decimal-bigdecimal",
    "cratestack-sqlx/decimal-bigdecimal",
]
# Replace the default `ring`-backed rustls provider with `aws-lc-rs`, which
# is the only provider with current FIPS 140-3 validation among the
# pure-Rust rustls backends. Selecting this feature does not make a build
# "FIPS-certified" — that requires the vendor's validated binary; it lets
# you compile and ship a binary that uses the validated crypto module.
crypto-aws-lc-rs = []

[dependencies]
chrono.workspace = true
cratestack-axum.workspace = true
cratestack-client-rust.workspace = true
cratestack-core.workspace = true
cratestack-macros.workspace = true
cratestack-parser.workspace = true
cratestack-policy.workspace = true
cratestack-sql.workspace = true
cratestack-sqlx.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-stream = "0.3"
axum.workspace = true
cratestack-codec-cbor.workspace = true
cratestack-codec-json.workspace = true
minicbor-serde.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
