[package]
name = "cratestack-rusqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "On-device SQLite backend for the CrateStack ORM. Sync API, bundled SQLite, no tokio, intended for mobile/embedded use via FFI."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["decimal-rust-decimal"]
decimal-rust-decimal = [
    "cratestack-core/decimal-rust-decimal",
    "cratestack-sql/decimal-rust-decimal",
    "dep:rust_decimal",
]
decimal-bigdecimal = [
    "cratestack-core/decimal-bigdecimal",
    "cratestack-sql/decimal-bigdecimal",
    "dep:bigdecimal",
]

[dependencies]
chrono.workspace = true
cratestack-core.workspace = true
cratestack-sql.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }

# wasm32-only deps: rusqlite 0.39 swaps its FFI to sqlite-wasm-rs on this target
# (memory VFS by default). For OPFS-backed persistence in the browser, the
# `install_opfs_vfs()` helper below uses `sqlite-wasm-vfs::sahpool`. The helper
# must run **inside a Dedicated Worker** — OPFS SyncAccessHandle is worker-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = { version = "0.5", default-features = false }
sqlite-wasm-vfs = "0.2"
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
