[package]
name = "cratestack-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["decimal-rust-decimal"]
decimal-rust-decimal = [
    "cratestack-core/decimal-rust-decimal",
    "dep:rust_decimal",
]
decimal-bigdecimal = [
    "cratestack-core/decimal-bigdecimal",
    "dep:bigdecimal",
]

[dependencies]
chrono.workspace = true
cratestack-core.workspace = true
cratestack-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
